--- a/src/views/CM/CM1/CM121/style/style.scss
+++ b/src/views/CM/CM1/CM121/style/style.scss
@@ -39,6 +39,19 @@
             justify-content: center;
         }
     }
+    &_disable {
+      position: relative;
+      &::before {
+        position: absolute;
+        content: ' ';
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: #02020215;
+        z-index: 1;
+      }
+    }
 }
 :deep .form-item-top {
   label {
