--- a/src/views/PA/PA5/PA520/style/style.scss
+++ b/src/views/PA/PA5/PA520/style/style.scss
@@ -46,7 +46,7 @@
         }
     }
     #gridContainer {
-      height: 730px;
+      max-height: 699px;
     }
     ::v-deep .custom-layout {
         padding: 10px 10px 10px 0;
