--- a/src/views/CM/CM1/CM121/style/style.scss
+++ b/src/views/CM/CM1/CM121/style/style.scss
@@ -40,17 +40,8 @@
         }
     }
     &_disable {
-      position: relative;
-      &::before {
-        position: absolute;
-        content: ' ';
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background-color: #02020215;
-        z-index: 1;
-      }
+      pointer-events: none;
+      opacity: 0.8;
     }
 }
 :deep .form-item-top {
